--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,230 +1,421 @@
-.main {
+.outter {
+  max-width: var(--max-width);
+  margin: 0 auto;
+
+  border-radius: 16px;
+  background: #fff;
+}
+
+.header {
+  height: 56px;
+  padding: 14px 20px;
+
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
+.steps_container {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+  gap: 4px;
+  height: fit-content;
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
+.step {
+  width: 8px;
+  height: 8px;
+  margin: 6px;
   display: inline-block;
-  transition: transform 200ms;
+  border: none;
+  background-color: #ebebef;
+  border-radius: 50%;
+
+  cursor: pointer;
 }
 
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
+.step.active {
+  width: 18px;
+  height: 10px;
+  border-radius: 14px;
+  background-color: #1f2327;
 }
 
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-  text-wrap: balance;
+.container {
+  display: flex;
+  padding: 36px;
+  gap: 120px;
 }
 
-.center {
+.content {
+  width: 360px;
+  gap: 32px;
+
+  padding: 74px 0px 106px;
+}
+
+.title {
+  gap: 4px;
+}
+
+.title h3 {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: -0.10000000149011612px;
+}
+
+.title p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+
+  color: #60646c;
+}
+
+.members_content {
+  gap: 24px;
+}
+
+.tabs {
+  gap: 8px;
+}
+
+.btn {
+  width: 100%;
+  padding: 14px 0px;
+  border-radius: 10px;
+  border: 1px solid #01012e22;
+  color: #1f2327;
+
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0px;
+
   display: flex;
   justify-content: center;
+
+  background: #fff;
+}
+
+.btn.active {
+  box-shadow: 0px 0px 0px 2px #02023414;
+  border: 1px solid #1f2327;
+}
+
+.travel_members {
+  gap: 16px;
+  border: 1px solid #0000301b;
+  border-radius: 16px;
+  box-shadow: 0px 1px 2px 0px #0000000f;
+  padding: 16px;
+}
+
+.head {
+  display: flex;
+  gap: 8px;
+}
+
+.head p {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0px;
+}
+
+.divider {
+  height: 1px;
+  width: 100%;
+
+  background-color: #0000301b;
+}
+
+.member_details {
+  display: flex;
   align-items: center;
-  position: relative;
-  padding: 4rem 0;
+  justify-content: space-between;
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+.member_details .name {
+  gap: 4px;
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+.member_details .name .rel {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0px;
 }
 
-.center::before,
-.center::after {
-  content: "";
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+.member_details .name .con {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0px;
+
+  color: #60646c;
 }
 
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+.actions {
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
+.actions .btn {
+  background: #00003b0d;
+  width: 32px;
+  height: 32px;
+  padding: 6px;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
+.actions .count {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0em;
+  min-width: 32px;
+  text-align: center;
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+.card_container {
+  padding: 72px 102px;
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
+.travel_card {
+  width: 444px;
+  height: 600px;
+  border-radius: 20px;
 
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+  box-shadow: 0px 0px 0px 4px #0000301b;
+
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  padding: 20px 20px 16px;
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+.travel_card_items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-bottom: 20px;
+}
+
+.travel_users {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.travel_title {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0em;
+  color: #eef0f1;
+}
+
+.travel_email {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0px;
+  color: #edf3fdad;
+}
+
+.passports {
+  display: flex;
+  gap: 8px;
+}
+
+.info_card {
+  width: 404px;
+  height: 464px;
+  border-radius: 16px;
+
+  background-color: #fff;
+
+  padding: 20px 0px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 16px;
+}
+
+.card_item_title {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+  width: fit-content;
+
+  padding: 0px 20px;
+}
+
+.card_item_title p {
+  width: fit-content;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0px;
+  color: #60646c;
+}
+
+.card_item_title .line {
+  width: 100%;
+  height: 0px;
+  border-top: 1px;
+  border-width: 1px;
+  border-style: dashed;
+  border-color: #d3d4db;
+}
+
+.list_item {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  padding: 0px 20px;
+}
+
+.list_item .key {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0px;
+
+  color: #60646c;
+}
+
+.list_item .val {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0px;
+
+  color: #1f2327;
+}
+
+.money_cards {
+  display: flex;
+  gap: 7px;
+  padding: 0px 20px;
+}
+
+.money_cards .card {
+  width: 178.5px;
+  padding: 12px;
+  border-radius: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  background: #f9f9fb;
+}
+
+.money_cards .card .key {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0px;
+
+  color: #60646c;
+}
+
+.money_cards .card .val {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0px;
+
+  color: #1f2327;
+}
+
+.travling_list {
+  display: flex;
+  gap: 16px;
+
+  padding: 0px 20px;
+}
+
+.travel_item {
+  display: flex;
+  gap: 8px;
+}
+
+.travel_item .amount {
+  width: 20px;
+  height: 20px;
+  border-radius: 25px;
+
+  background: #f2f2f5;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 16px;
+  letter-spacing: 0px;
+}
+
+.travel_item .name {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0px;
+}
+
+.bottom_text {
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 16px;
+  letter-spacing: 0px;
+
+  text-align: center;
+
+  color: #e6f4fe75;
+}
+
+.bottom_bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.back_link {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  cursor: pointer;
+}
+
+.back_link p {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0px;
+}
+
+.continue_btn {
+  padding: 14px 16px;
+  border-radius: 10px;
+  border: none;
+
+  background: #1f2327;
+
+  color: #fcfcfd;
+
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0px;
+
+  cursor: pointer;
 }
